Started documenting using lsp-java